--- a/movie_manager/Templates/list.html
+++ b/movie_manager/Templates/list.html
@@ -17,8 +17,7 @@
 <br>
 {% for movie_obj in movies %}
     <h1>Title: {{movie_obj.title | upper | default:'Data not found for this movie'}}</h1>
-    <img src="{% static 'images/' %}{{ movie_obj.img }}" alt="Data not found." >
-    <p>Summary: {{movie_obj.summary | default:'summary not found for this movie '}}</p>
+    <p>Summary: {{movie_obj.description | default:'summary not found for this movie '}}</p>
     <h4>Year: {{movie_obj.year}}</h4>
     
     {% endfor %}
