--- a/movie_manager/static/css/style.css
+++ b/movie_manager/static/css/style.css
@@ -32,16 +32,19 @@
 }
 
 .title{
-    width: 150px;
+    width: 375px;
+    height: 22px;
     border-radius: 3px;
 }
 .year{
     border-radius: 3px;
     width: 50px;
+    height: 22px;
 }
 .summary{
-    width: 250px;
+    width: 450px;
     border-radius: 3px;
+    height: 22px;
 }
 .form-enter{
        
