--- a/movie_manager/Templates/list.html
+++ b/movie_manager/Templates/list.html
@@ -15,12 +15,19 @@
 {% block content %}
 <h1 class="title-common">List</h1>
 <br>
+<table class="table-list">
+    <tr><th>Title:</th><th>Year:</th><th>Summary:</th><th>Edit | Delete</th></tr>
 {% for movie_obj in movies %}
-    <h1>Title: {{movie_obj.title | upper | default:'Data not found for this movie'}}</h1>
-    <p>Summary: {{movie_obj.description | default:'summary not found for this movie '}}</p>
-    <h4>Year: {{movie_obj.year}}</h4>
-    
+    <tr>
+    <td><h1>Title: {{movie_obj.title | upper | default:'Data not found for this movie'}}     </h1></td>
+    <td><p>Summary: {{movie_obj.description | default:'summary not found for this movie '}}       </p></td>
+    <td><h4>Year: {{movie_obj.year}}</h4></td>
+    <td><a href="">Edit</a> |  <a href="">Delete</a></td>
+    </tr>
+    <br>
+    <br>
     {% endfor %}
+    </table>
 {% endblock content %}
 </body>
 </html>
