--- a/movie_manager/static/css/style.css
+++ b/movie_manager/static/css/style.css
@@ -49,8 +49,11 @@
 .form-enter{
        
     width: 930px;
-    margin-left: -1px;
+    margin-left: -40px;
     padding-right: 109px;
     height: 300px;
     padding-top: 1px;
+}
+.table-list{
+    margin-left: 200px;
 }
