after crud functions

--- a/movie_manager/Templates/list.html
+++ b/movie_manager/Templates/list.html
@@ -22,7 +22,7 @@
     <td><h1>Title: {{movie_obj.title | upper | default:'Data not found for this movie'}}     </h1></td>
     <td><p>Summary: {{movie_obj.description | default:'summary not found for this movie '}}       </p></td>
     <td><h4>Year: {{movie_obj.year}}</h4></td>
-    <td><a href="">Edit</a> |  <a href="">Delete</a></td>
+    <td><a href="{% url 'edit' movie_obj.id %}">Edit</a> |  <a href="{% url 'delete' movie_obj.id %}">Delete</a></td>
     </tr>
     <br>
     <br>
