--- a/movie_manager/Templates/list.html
+++ b/movie_manager/Templates/list.html
@@ -19,7 +19,13 @@
     <tr><th>Title:</th><th>Year:</th><th>Summary:</th><th>Edit | Delete</th></tr>
 {% for movie_obj in movies %}
     <tr>
-    <td><h1>Title: {{movie_obj.title | upper | default:'Data not found for this movie'}}     </h1></td>
+    <td><h1>Title: {{movie_obj.title | upper | default:'Data not found for this movie'}}</h1>
+    {% if movie_obj.poster %}
+        <img class="img-movie" src="{{ movie_obj.poster.url }}" alt="{{ movie_obj.title }}">
+    {% else %}
+        <p>No poster available</p>
+    {% endif %}
+    </td>
     <td><p>Summary: {{movie_obj.description | default:'summary not found for this movie '}}       </p></td>
     <td><h4>Year: {{movie_obj.year}}</h4></td>
     <td><a href="{% url 'edit' movie_obj.id %}">Edit</a> |  <a href="{% url 'delete' movie_obj.id %}">Delete</a></td>
