--- a/movie_manager/Templates/create.html
+++ b/movie_manager/Templates/create.html
@@ -16,7 +16,7 @@
         {{ form.as_p }}
         
     
-        <button type="submit" class="btn">Create</button>
+        <button type="submit" class="btn">submit</button>
       </form>
     </div>
     {% endblock content %}
